# calby-documents

./: .env  .env.exapmle  .gitignore  Cargo.toml  README.md  build.rs  build.sh  docker-compose.yml  run.sh
proto/: documents.proto
src/: main.rs
src/data/: mod.rs
src/db/: mod.rs  schema.rs
src/enviroment/: mod.rs
src/psql_handler/: mod.rs
src/router/: mod.rs  routes.rs
src/service/: mod.rs
src/utils/: mod.rs
