[package]
name = "calby-documents"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
base64 = "0.13.0"
bb8 = "0.8"
bb8-postgres = "0.8"
chrono = { version = "0.4", features = ["serde"] }
custom_error = "1.9.2"
futures = "0.3"
tonic = "0.7"
prost = "0.10"
hyper = { version = "0.14", features = ["full"] }
passwords = { version = "*", features = ["crypto"] }
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }

[build-dependencies]
tonic-build = "0.7"