[package]
name = "calby-documents"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
bb8 = "0.8"
bb8-postgres = "0.8"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
diesel-derive-enum = "1.1.2"
chrono = { version = "0.4", features = ["serde"] }
custom_error = "1.9.2"
futures = "0.3"
tonic = "0.7"
prost = "0.10"
hyper = { version = "0.14", features = ["full"] }
passwords = { version = "*", features = ["crypto"] }
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = "0.7.5"
postgres-types = {version = "0.2.3", features = ["derive"]}
postgres-derive = "0.4.2"
postgres = "0.19.3"

[build-dependencies]
tonic-build = "0.7"
